--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -61,6 +61,11 @@ header .textos-header{
     color: #fff;
 }
 
+.textos-header h5{
+    font-size: 10px;
+    font-weight: 600;
+    color: #fff;
+}
 .wave {
     position: absolute;
     bottom: 0;
@@ -149,6 +154,7 @@ header .textos-header{
     position: relative;
     cursor: pointer;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+    text-align: center;
 }
 
 .imagen-nucleos > img{
@@ -268,14 +274,16 @@ footer{
     color: #222!important;
 }
 .boton {
-    height: 45px;
-    width: 80px;
+    font-size: 20px;
+    height: 50px;
+    width: 90px;
     background-color: white;
     color: #222!important;
     border-radius: 40px;
     text-decoration: none;
     background-color: #00d973; /* Código de un color Verde */
     color: white!important;
+    margin-top: 100px;
 }
 .boton:hover{
     background-color: darkgreen;
